# Laboratorio.PA

./: CMakeLists.txt  DTInfoEstudiante.cpp  DTInfoEstudiante.h  Estructura.h  Estudiante.cpp  Estudiante.h  Informacion.cpp  Informacion.h  Libro.cpp  Libro.h  PaginaWeb.cpp  PaginaWeb.h  chatGPT.cpp  chatGPT.h  main.cpp
